--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The base URL of the site; the only required configuration variable.
-base_url = "https://diohabara.github.io"
+base_url = "https://diohabara.netlify.app/"
 description = "Blog by (^_^)"
 
 theme = "even"
