--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,23 @@ jobs:
     name: Build with minimal options
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Build with the latest action rev
-        uses: diohabara/diohabara.github.io@master
-        env:
-          PAGES_BRANCH: build-test-1
-          BUILD_DIR: test-site
-          TOKEN: ${{ secrets.TOKEN }}
+    - uses: actions/checkout@master
+    - name: Build with the latest action rev
+      uses: shalzz/zola-deploy-action@master
+      env:
+        PAGES_BRANCH: build-test-1
+        BUILD_DIR: .
+        TOKEN: ${{ secrets.TOKEN }}
   build-2:
     name: Build with BUILD_FLAGS
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Build with the latest action rev
-        uses: diohabara/diohabara.github.io@master
-        env:
-          PAGES_BRANCH: build-test-2
-          BUILD_DIR: test-site
-          BUILD_FLAGS: --drafts
-          TOKEN: ${{ secrets.TOKEN }}
+    - uses: actions/checkout@master
+    - name: Build with the latest action rev
+      uses: shalzz/zola-deploy-action@master
+      env:
+        PAGES_BRANCH: build-test-2
+        BUILD_DIR: .
+        BUILD_FLAGS: --drafts
+        TOKEN: ${{ secrets.TOKEN }}
+© 2020 GitHub, Inc.
