--- a/config.toml
+++ b/config.toml
@@ -8,9 +8,24 @@ theme = 'gokarna'
 enableRobotsTXT = true
 
 [markup]
+  # ref: https://gohugo.io/getting-started/configuration-markup/#highlight
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+  # ref: https://gohugo.io/getting-started/configuration-markup/#highlight
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = true
+    noHl = false
+    style = 'monokai'
+    tabWidth = 4
 
 [params]
   description = "MAKE THE WORLD FUN AGAIN"
