--- a/config.toml
+++ b/config.toml
@@ -1,77 +1,63 @@
 baseURL = 'https://diohabara.github.io'
 defaultContentLanguage = "en"
 languageCode = 'en'
-title = 'barabara diary'
 theme = 'gokarna'
+title = 'barabara diary'
 
 # Automatically generate robots.txt
 enableRobotsTXT = true
 
 [markup]
-  # ref: https://gohugo.io/getting-started/configuration-markup/#highlight
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-  # ref: https://gohugo.io/getting-started/configuration-markup/#highlight
-  [markup.highlight]
-    anchorLineNos = false
-    codeFences = true
-    guessSyntax = false
-    hl_Lines = ''
-    lineAnchors = ''
-    lineNoStart = 1
-    lineNos = true
-    lineNumbersInTable = true
-    noClasses = true
-    noHl = false
-    style = 'monokai'
-    tabWidth = 4
+# ref: https://gohugo.io/getting-started/configuration-markup/#highlight
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
+# ref: https://gohugo.io/getting-started/configuration-markup/#highlight
+[markup.highlight]
+anchorLineNos = false
+codeFences = true
+guessSyntax = false
+hl_Lines = ''
+lineAnchors = ''
+lineNoStart = 1
+lineNos = true
+lineNumbersInTable = true
+noClasses = true
+noHl = false
+style = 'monokai'
+tabWidth = 4
 
 [params]
-  description = "MAKE THE WORLD FUN AGAIN"
-  showPostsOnHomePage = "recent"
-  avatarURL = "/images/avatar.jpg"
-  # Keywords relevant for SEO
-  metaKeywords = ["blog", "diohabara", "hugo"]
+avatarURL = "/images/avatar.jpg"
+description = "MAKE THE WORLD FUN AGAIN"
+showPostsOnHomePage = "recent"
+# Keywords relevant for SEO
+metaKeywords = ["blog", "diohabara", "hugo"]
 
 [menu]
-  [[menu.main]]
-    # Unique identifier for a menu item
-    identifier = "ja-blog"
-    # Display name at header
-    name = "ブログ"
-    # path name
-    url = "/ja-blog/"
-    # You can add extra information before the name (HTML format is supported), such as icons
-    pre = "<span data-feather='map-pin'></span>"
-    # You can add extra information after the name (HTML format is supported), such as icons
-    post = ""
-    # Weights are used to determine the ordering
-    weight = 1
+[[menu.main]]
+identifier = "blog"
+name = "blog"
+post = ""
+pre = "<span data-feather='globe'></span>"
+url = "/blog/"
+weight = 2
 
-  [[menu.main]]
-    identifier = "en-blog"
-    name = "blog"
-    url = "/en-blog/"
-    pre = "<span data-feather='globe'></span>"
-    post = ""
-    weight = 2
+[[menu.main]]
+identifier = "tags"
+name = "Tags"
+url = "/tags/"
+weight = 3
 
-  [[menu.main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags/"
-    weight = 3
+[[menu.main]]
+identifier = "github"
+url = "https://github.com/diohabara/"
+weight = 4
+# We use feather-icons: https://feathericons.com/
+pre = "<span data-feather='github'></span>"
 
-  [[menu.main]]
-    identifier = "github"
-    url = "https://github.com/diohabara/"
-    weight = 4
-    # We use feather-icons: https://feathericons.com/
-    pre = "<span data-feather='github'></span>"
-
-  [[menu.main]]
-    identifier = "rss"
-    pre = "<span data-feather='rss'></span>"
-    url = "/index.xml"
-    weight = 5
+[[menu.main]]
+identifier = "rss"
+pre = "<span data-feather='rss'></span>"
+url = "/index.xml"
+weight = 5
