--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ showPostsOnHomePage = "recent"
 metaKeywords = ["blog", "diohabara", "hugo"]
 
 [menu]
+# feather-icons でアイコン設定可能: https://feathericons.com/
 [[menu.main]]
 identifier = "blog"
 name = "blog"
@@ -44,17 +45,24 @@ url = "/blog/"
 weight = 2
 
 [[menu.main]]
+identifier = "compensation"
+name = "Compensation"
+pre = "<span data-feather='dollar-sign'></span>"
+url = "/compensation/"
+weight = 3
+
+[[menu.main]]
 identifier = "tags"
 name = "Tags"
+pre = "<span data-feather='tag'></span>"
 url = "/tags/"
 weight = 3
 
 [[menu.main]]
 identifier = "github"
+pre = "<span data-feather='github'></span>"
 url = "https://github.com/diohabara/"
 weight = 4
-# We use feather-icons: https://feathericons.com/
-pre = "<span data-feather='github'></span>"
 
 [[menu.main]]
 identifier = "rss"
