feat: add toefl

--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ hl_Lines = ''
 lineAnchors = ''
 lineNoStart = 1
 lineNos = true
-lineNumbersInTable = true
+lineNumbersInTable = false
 noClasses = true
 noHl = false
 style = 'monokai'
