--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -63,8 +63,10 @@ jobs:
       - name: Link Checker
         uses: lycheeverse/lychee-action@v2
         with:
+          # Check both external links and internal file links
+          # Warnings about relative paths are expected and don't indicate broken links
           args: --config lychee.toml --verbose ./public
-          fail: true  # Fail on broken links (default behavior)
+          fail: true  # Fail on broken links (404 and ERROR only)
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
