--- a/lychee.toml
+++ b/lychee.toml
@@ -2,7 +2,7 @@
 # https://github.com/lycheeverse/lychee
 
 # Base URL for resolving relative links
-base = "https://diohabara.github.io"
+base = "https://diohabara.github.io/blog"
 
 # Maximum number of retries
 max_retries = 3
