--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build && pnpm pagefind --site dist",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "prepare": "git config core.hooksPath .githooks"
   },
   "packageManager": "pnpm@10.28.0",
   "dependencies": {
